2015-06-09 Version 0.1:
	* Initial release of DepQBF4Py.