@@ -1,6 +1,19 @@
-A sample Python project
-=======================
+DepQBF4Py -- Python API to the QBF solver DepQBF
+===================================================
 
-A sample project that exists as an aid to the `Python Packaging User Guide
-<https://packaging.python.org>`_'s `Tutorial on Packaging and Distributing
-Projects <https://packaging.python.org/en/latest/distributing.html>`_.
+This is the Python API (DepQBF4Py) for the search-based QBF solver
+DepQBF. See DepQBF README for details about DepQBF and the version.
+
+Tutorial
+<http://lonsing.github.io/depqbf/>
+
+Description of the C API can be found in the following technical
+report:
+
+Florian Lonsing and Uwe Egly: "Incrementally Computing Minimal
+Unsatisfiable Cores of QBFs via a Clause Group Solver API".  Technical
+report, arXiv/CoRR, February/May 2015. <http://arxiv.org/abs/1502.02484>
+
+Sources
+<https://github.com/lonsing/depqbf>
+
