@@ -1,0 +1,16 @@
+
+July 2015
+
+-------------------
+GENERAL INFORMATION
+-------------------
+
+This is the Python API (DepQBF4Py) for the search-based QBF solver
+DepQBF. See DepQBF README for details about DepQBF and the version.
+
+Description of the C API can be found in the following technical
+report:
+
+Florian Lonsing and Uwe Egly: "Incrementally Computing Minimal
+Unsatisfiable Cores of QBFs via a Clause Group Solver API".  Technical
+report, arXiv/CoRR, February/May 2015. http://arxiv.org/abs/1502.02484
