@@ -160,20 +160,10 @@ setup(
         'dev': ['check-manifest', 'memory_profiler'],
         'test': ['coverage','memory_profiler'],
     },
+    #needed for lates linux versions
+    test_requires=['memory_profiler'],
     include_package_data = True,
     test_suite='tests'
 )
-
-# # Mac OS X depedencies
-# if platform.system() == 'Darwin':
-#     extra_link_args = ["-framework", "CoreFoundation", 
-#                        "-framework", "AudioToolbox"]
-#     version = platform.mac_ver()[0].split(".")    
-#     # OS X Lion (10.7.x) or above support
-#     if version[0] == '10' and int(version[1]) >= 7:
-#         extra_link_args += ["-framework", "AudioUnit"]
-# else:
-#     extra_link_args = []
-
 
 
