@@ -1,2 +1,5 @@
+2015-07-11 Version 4.01:
+	* Updated version to DepQBF version
+	* Added python installer
 2015-06-09 Version 0.1:
 	* Initial release of DepQBF4Py.
